--- a/index.html
+++ b/index.html
@@ -60,30 +60,30 @@
 <textarea id="structure" style="width:100%; min-height: 600px;">
 A Problem
 - People
--- Why?
+-- Fatigue
 --- Why?
 ---- Why?
      ! Comment node with exclamation / @author / + for pros
      ! Comment node with exclamation / @author / - for cons
 
-- Process
--- Why?
+- Interactions
+-- Precedent
 --- Why?
 
-- Equipment
--- Why?
+- Processes
+-- A lot of meetings
 --- Why?
 
 - Materials
--- Why?
+-- Slow server
 --- Why?
 
 - Environment
--- Why?
+-- Market is down
 --- Why?
 
-- Management
--- Precedent
+- Requirements
+-- Too large stories
 --- Why?
 </textarea>
 </div>
