--- a/index.html
+++ b/index.html
@@ -71,19 +71,11 @@ A Problem
 --- Why?
 
 - Processes
--- A lot of meetings
---- Why?
-
-- Materials
--- Slow server
---- Why?
-
-- Environment
--- Market is down
+-- Lot's of meetings
 --- Why?
 
 - Requirements
--- Too large stories
+-- Large stories
 --- Why?
 </textarea>
 </div>
